cmake_minimum_required(VERSION 3.19)
project(CIS22B)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(include)
include_directories(src)

add_executable(function_exercises src/function_exercises.cpp)
add_executable(array_function_exercises src/array_function_exercises.cpp)
add_executable(pointers_practice src/pointers_practice.cpp)
add_executable(track_expenses src/track_expenses.cpp)
add_executable(midterm_prac_1 src/midterm_prac_1.cpp)
add_executable(midterm_prac_2 src/midterm_prac_2.cpp)
add_executable(midterm src/midterm.cpp)
add_executable(pointers_array src/pointers_array.cpp)
add_executable(writing_classes src/writing_classes.cpp)
add_executable(acronym_lookup src/acronym_lookup.cpp)
add_executable(inheritance_practice src/inheritance_practice.cpp)
add_executable(polymorphism_exception src/polymorphism_exception.cpp)
add_executable(transact_stocks src/transact_stocks.cpp)
add_executable(final_exam_practice src/final_exam_practice.cpp)
add_executable(final_exam src/final_exam.cpp)
